--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -5,6 +5,15 @@
     background-color: grey;
     color: white;
     transition: 0.5s;
+    white-space: nowrap;
+}
+
+.header {
+    border-bottom: 2px solid white;
+    display: table;
+    width: 100%;
+    padding: 0 10px;
+    overflow: hidden;
 }
 
 .btn {
@@ -17,6 +26,13 @@
 }
 
 .btn:hover {
-    background-color: white;
-    color: grey;
+    background-color: #A0AE62;
+}
+
+.section-inner {
+    padding: 10px;
+}
+
+.section-outer:hover {
+    background-color: #A0AE62;
 }
