--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -13,7 +13,12 @@
     display: table;
     width: 100%;
     padding: 0 10px;
-    overflow: hidden;
+}
+
+.footer {
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
 }
 
 .btn {
